# fastapi-tankmonitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: firebase.py  main.py
