[project]
name = "fastapi-tankmonitor"
version = "0.1.0"
description = "Backend for the Tank Monitor project with FastAPI and Firebase"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "google-cloud-firestore (>=2.20.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
